src/test/deca/context/invalid/resultats/test5_unary_minus-cont.res
./src/test/deca/context/invalid/test5_unary_minus.deca:17:1: Unary minus must be applied to an expression of type int or float (current type : boolean).
